# klondike2

./: Cargo.toml
src/: klondike.rs  lib.rs  model.rs
src/klondike/: dealer.rs  game.rs  rules.rs  settings.rs  table.rs
src/model/: action.rs  card.rs  dealer.rs  deck.rs  game.rs  klondike_rules.rs  pile.rs  rules.rs  selection.rs  table.rs
src/model/table/: add_stock_action.rs  deal_action.rs  draw_action.rs  move_action.rs  reveal_action.rs
