[package]
name = "klondike2"
version = "0.1.0"
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]
edition = "2018"

description = "CLI Klondike Solitaire written in Rust"
categories = ["games"]
license = "MIT"
repository = "http://github.com/chrisbouchard/klondike2"
readme = "README.md"

[dependencies]
enum-iterator = "0.6"
itertools = "0.9"
num-traits = "0.2"
rand = "0.7"
snafu = "0.6"
termion = "1.5"
tui = "0.13"
velcro = "0.4"

[lib]
name = "klondike2_lib"
path = "src/lib.rs"

[[bin]]
name = "klondike2"
path = "src/main.rs"

