[package]
name = "klondike2"
version = "0.1.0"
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]
edition = "2018"

description = "CLI Klondike Solitaire written in Rust"
categories = ["games"]
license = "MIT"
repository = "http://github.com/chrisbouchard/klondike2"
readme = "README.md"

[dependencies]
assert_matches = "1.4"
derive_more = "0.99"
itertools = "0.9"
enum_like = "0.2"
enum_like_derive = "0.1"
rand = "0.7"
snafu = "0.6"
termion = "1.5"
tui = "0.13"
velcro = "0.4"

[dev-dependencies]
test-case = "1.1"

[lib]
name = "klondike2_lib"
path = "src/lib.rs"

[[bin]]
name = "klondike2"
path = "src/main.rs"

